traversal.snake.Snake.scala.error
Compilation error:
Snake:5: error: value unary_! is not a member of Unit
  } while (! isInPosition())
           ^Snake:13: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
      return true
             ^Snake:13: warning: enclosing method isInPosition has result type Unit: return value discarded
      return true
      ^Snake:17: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
      return false
             ^Snake:17: warning: enclosing method isInPosition has result type Unit: return value discarded
      return false
      ^