traversal.snake.Snake.scala.code
override def run() {
  brushDown()
  do {
    doTheMove()
  } while (! isInPosition())
}

def isInPosition() {
  if (getDirection() == Direction.EAST) {
    left()
    if (isFacingWall()) {
      right()
      return true
    }
    else {
      right()
      return false
    }
  }
}

def doTheMove() {
  forward(6)
  if (getDirection() == Direction.EAST) {
    left()
    forward()
    left()
  }
  if (getDirection() == Direction.WEST) {
    right()
    forward()
    right
  }
}